--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,16 @@ __pycache__/
 *$py.class
 *.so
 .Python
+build/
+dist/
+*.egg-info/
+*.egg
+.eggs/
+
+# Virtual environments
 env/
 venv/
+.venv/
 ENV/
 env.bak/
 venv.bak/
@@ -25,7 +33,29 @@ venv.bak/
 *.swp
 *.swo
 *~
+.cursor/
+
+# Jupyter notebooks checkpoints
+.ipynb_checkpoints/
+
+# Environment & secrets (CRITICAL - never commit these)
+.env
+.env.local
+.env.*.local
+*.pem
+*.key
+secrets.json
+
+# Database files (local dev)
+*.db
+*.duckdb
+*.sqlite
+*.sqlite3
+
+# Logs
+*.log
+logs/
 
 # Project specific
-.env
-*.log
+static/cats/*.jpg
+!static/cats/.gitkeep
