Add Groq as primary LLM provider with Gemini fallback
- Switch to Groq (Llama 3.3 70B) as the preferred LLM for caption scoring
- Gemini remains as a fallback option if GROQ_API_KEY is not set
- Update llm.py with multi-provider support and better error handling
- Update requirements.txt to include groq package
- Update README.md and AGENTS.md with new setup instructions
- Update .env.example with GROQ_API_KEY configuration

Groq offers a generous free tier without the quota issues we hit with Gemini.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@
 # Web UI framework
 gradio>=4.0.0
 
-# Google Gemini AI
+# LLM APIs (Groq preferred, Gemini as fallback)
+groq>=0.9.0
 google-generativeai>=0.8.0
 
 # Database
