--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,11 @@
 # Copy this file to .env and fill in your values:
 #   cp .env.example .env
 
-# Required: Google Gemini API key
+# LLM API Keys (Groq is preferred - faster and free!)
+# Get Groq key at: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+
+# Fallback: Google Gemini API key
 # Get yours at: https://aistudio.google.com/apikey
 GOOGLE_API_KEY=your_google_api_key_here
 
@@ -11,11 +15,8 @@ GOOGLE_API_KEY=your_google_api_key_here
 THECATAPI_KEY=your_cat_api_key_here
 
 # Optional: Enable fake LLM mode for testing without API key
-# Set to "true" to use random scores instead of Gemini
+# Set to "true" to use random scores instead of real LLM
 FAKE_LLM_MODE=false
 
 # Optional: Number of rounds per game (default: 5)
 ROUNDS_PER_GAME=5
-
-# Optional: Round timer in seconds (default: 45)
-ROUND_TIMER_SECONDS=120
