--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -7,7 +7,8 @@ pydantic-settings>=2.1.0
 
 # Database
 sqlalchemy[asyncio]>=2.0.25
-asyncpg>=0.29.0
+aiosqlite>=0.19.0  # Async SQLite for development
+asyncpg>=0.29.0    # Async PostgreSQL for production
 alembic>=1.13.0
 
 # LLM Providers
